中文化，未运行

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -4,51 +4,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementing a Variational Autoencoder\n",
+    "# Implementing a Variational Autoencoder 实现变体自动编码器\n",
     "\n",
     "### Generative models model a distribution of data over high dimensional space\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Image of Yaktocat](https://blog.openai.com/content/images/2017/02/gen_models_diag_2.svg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Autoencoders are a type of generative model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Image of Yaktocat](https://image.slidesharecdn.com/pydatanyc2015torresfinal-151111035917-lva1-app6891/95/deep-style-using-variational-autoencoders-for-image-generation-37-638.jpg?cb=1447260130)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Problems\n",
-    "- They will overfit unless large training data\n",
-    "- Gradients diminish quickly so weight updates get progressively smaller the farther we go from the output (vanishing gradient)\n",
     "\n",
-    "### Solution\n",
-    "- Add a variational component to regularize training"
+    "### 生成模型模拟高维空间数据分布"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image of Yaktocat](http://www.fastforwardlabs.com/blog-images/miriam/imgs_code/vae.4.png)"
+    "![Image of Yaktocat](images/gen_models_diag_2.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Autoencoders are a type of generative model 自编码器是一种生成型号"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image of Yaktocat](images/deep-style-using-variational-autoencoders-for-image-generation-37-638.jpg?cb=1447260130)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problems 问题\n",
+    "- They will overfit unless large training data \n",
+    "- Gradients diminish quickly so weight updates get progressively smaller the farther we go from the output (vanishing gradient)\n",
+    "+\n",
+    "- 除非大量的训练数据外，他们将会过拟合\n",
+    "- 渐变减慢，所以权重更新越来越小，输出越远（消失的渐变）\n",
+    "\n",
+    "### Solution 解决方案\n",
+    "- Add a variational component to regularize training\n",
+    "+\n",
+    "- 添加一个变分组件来规范培训"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image of Yaktocat](images/vae.4.png)"
    ]
   },
   {
@@ -59,6 +65,15 @@
     "- they are built on top of standard function approximators (neural networks), and can be trained with SGD\n",
     "- simple neural nets can represent a wide variety of interesting functions when given appropriate parameters\n",
     "- VAE examples \n",
+    "- pokemon https://github.com/musicmilif/Pokemon-Generator/blob/master/VAE.ipynb\n",
+    "- faces https://github.com/ahmed-touati/vanilla_vae\n",
+    "\n",
+    "+\n",
+    "\n",
+    "- VAEs是3年前推出的\n",
+    "- 它们建立在标准函数逼近器(神经网络)之上，可以用SGD训练\n",
+    "- 当给定适当的参数时，简单的神经网络可以代表各种有趣的功能\n",
+    "- VAE示例\n",
     "- pokemon https://github.com/musicmilif/Pokemon-Generator/blob/master/VAE.ipynb\n",
     "- faces https://github.com/ahmed-touati/vanilla_vae"
    ]
@@ -159,15 +174,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Encoder\n",
-    "The encoder consists of a 2 layer, fully connected feed forward network that reduces the dimensionality from the original number of features (e.g. pixel) to the dimensionality of the latent space. This network has two outputs -- the mean and (log) standard deviation of a gaussian distribution."
+    "## Encoder 编码器\n",
+    "The encoder consists of a 2 layer, fully connected feed forward network that reduces the dimensionality from the original number of features (e.g. pixel) to the dimensionality of the latent space. This network has two outputs -- the mean and (log) standard deviation of a gaussian distribution.\n",
+    "\n",
+    "编码器由一个2层全连接的前馈网络组成，可以将原始数量的特征（例如像素）的维数降低到潜在空间的维数。 该网络具有两个输出 - 高斯分布的平均值和（对数）标准偏差。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image of Yaktocat](https://cdn-images-1.medium.com/max/2000/1*op0VO_QK4vMtCnXtmigDhA.png)"
+    "![Image of Yaktocat](images/1-op0VO_QK4vMtCnXtmigDhA.png)"
    ]
   },
   {
@@ -232,9 +249,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decoder\n",
+    "## Decoder 解码器\n",
     "\n",
-    "The decoder (or, in the language of LFADS, the 'generator') is also a feedforward, fully connected network -- however, it goes from the dimensionality of the latent space back to the original dimensionality of the data (e.g. pixels). The output of the network is squashed between 0 and 1 with a sigmoid function."
+    "The decoder (or, in the language of LFADS, the 'generator') is also a feedforward fully connected network -- however, it goes from the dimensionality of the latent space back to the original dimensionality of the data (e.g. pixels). The output of the network is squashed between 0 and 1 with a sigmoid function.\n",
+    "\n",
+    "解码器(或者以LFADS的语言，`生成器`）也是前馈的完全连接的网络 - 然而，它从潜在空间的维度返回到数据的原始维数（例如像素）。 网络的输出通过S形功能在0和1之间被压缩。"
    ]
   },
   {
@@ -266,8 +285,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loss function\n",
+    "## Loss function 损失函数\n",
     "Each of these outputs is taken to be the mean of a Bernoulli distribution (in this example, a Bernoulli distribution is appropriate because our data is binary). The variational lower bound is given by:\n",
+    "\n",
+    "这些输出中的每一个都被认为是伯努利分布的平均值（在这个例子中，伯努利分布是适当的，因为我们的数据是二进制的）。 变分下限由下式给出：\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{L} = \\mathbb{E}_{z\\sim Q(z|X)}\\log P(X|z) - D(Q(z|X)||P(z))\n",
@@ -275,17 +296,23 @@
     "\n",
     "When $P$ is a Bernouli distribution, the log likelihood is given by\n",
     "\n",
+    "当 $P$ 是伯努利分布时，对数似然率由下式给出\n",
+    "\n",
     "\\begin{equation}\n",
     "\\log P(X|z) = \\sum_i^N X^{(i)}\\log y^{(i)} + (1 − X^{(i)}) \\cdot \\log(1 − y^{(i)})\n",
     "\\end{equation}\n",
     "\n",
     "where $N$ is the number of training samples (in our case, the batchsize), and $y^{(i)}$ is the reconstruction from the latent code $z^{(i)}$. The KL divergence between a gaussian $Q$ with mean $\\mu$ and standard deviation $\\sigma$ and a standard normal distribution $P$ is given by:\n",
     "\n",
+    "其中 $N$ 是训练样本的数量（在我们的例子中是batchsize），$y^{(i)}$ 是从潜在代码 $z^{(i)}$ 的重构。 高斯 $Q$ 与平均 $\\mu$ 和标准差 $\\sigma$ 和标准正态分布 $P$ 之间的KL分歧由下式给出：\n",
+    "\n",
     "\\begin{equation}\n",
     "D(Q||P) = -\\frac{1}{2}\\sum_j^J \\big(1 + \\log((\\sigma_j)^2) - (\\mu_j)^2 - (\\sigma_j)^2\\big)\n",
     "\\end{equation}\n",
     "\n",
-    "We want to maximize this lower bound, but because tensorflow doesn't have a 'maximizing' optimizer, we minimize the negative lower bound."
+    "We want to maximize this lower bound, but because tensorflow doesn't have a 'maximizing' optimizer, we minimize the negative lower bound.\n",
+    "\n",
+    "我们希望最大化这个下限，但是由于张量流没有“最大化”优化器，我们最小化负下限。"
    ]
   },
   {
@@ -324,9 +351,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training\n",
+    "## Training 训练\n",
     "\n",
-    "Now all we have to do is run the optimizer until convergence. "
+    "Now all we have to do is run the optimizer until convergence. 现在我们要做的就是运行优化器直到收敛。"
    ]
   },
   {
@@ -451,9 +478,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Results\n",
+    "## Results 结果\n",
     "\n",
-    "Here, we plot the reconstructed image on test set images."
+    "Here, we plot the reconstructed image on test set images.\n",
+    "\n",
+    "在这里，我们绘制重建图像在测试集图像。"
    ]
   },
   {
@@ -615,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
